# ha-rainsoft

./: .gitignore  ARCHITECTURE.md  README.md  hacs.json  pyproject.toml  requirements_test.txt  test_standalone.py
.github/workflows/: ci.yml  validate.yml
custom_components/rainsoft/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json  switch.py
custom_components/rainsoft/translations/: en.json
dashboards/: rainsoft-dashboard.yaml
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_init.py
