[project]
name = "ha-rainsoft"
version = "1.1.0"
description = "RainSoft water softener integration for Home Assistant"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
